Fixed cog alignment

--- a/app/assets/com/beligum/cms/stylesheets/layouter.less
+++ b/app/assets/com/beligum/cms/stylesheets/layouter.less
@@ -148,10 +148,10 @@ body.layout-mode .layout-content:hover {
 #layouter-admin-toggle {
 	z-index: 9999;
 	position: fixed;
-	top: 8px;
-	right: 10px;
+	top: 14px;
+	right: 20px;
 }
-#layouter-admin-toggle:hover {
+#layouter-admin-toggle a:hover {
 	text-decoration: none;
 }
 #layouter-admin-toggle i {
